unpackaged/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>BasePrice__c</fullName>
        <label>Base Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomMargin__c</fullName>
        <label>Custom Margin</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuantityType__c</fullName>
        <label>Quantity Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>liter</fullName>
                </value>
                <value>
                    <fullName>cubic-meter</fullName>
                </value>
                <value>
                    <fullName>meter</fullName>
                </value>
                <value>
                    <fullName>unit</fullName>
                </value>
                <value>
                    <fullName>kilogram</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RetailPrice__c</fullName>
        <formula>BasePrice__c * (1 + IF(CustomMargin__c &lt;&gt; 0, CustomMargin__c, 0.2) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retail Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>